fix : 백엔드 쪽 소스 보완 및 exception 처리 등 그동안한 작업 커밋